crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__map_response_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async getUserMap(): Promise<Record<string, User>> {
    const response = await fetch(`${baseUrl}/api/users/map`, {
      method: "GET",
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as Record<string, User>;
  },
};
