crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__minimal_endpoint_client.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async healthCheck(): Promise<void> {
    const response = await fetch(`${baseUrl}/api/health`, {
      method: "GET",
    });
    if (!response.ok) {
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
  },
};
