crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multi_status_all_typeless_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { EnqueueJobResponse } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async enqueueJob(): Promise<EnqueueJobResponse> {
    const response = await fetch(`${baseUrl}/api/jobs`, {
      method: "POST",
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    await response.body?.cancel().catch(() => undefined);
    return { status: response.status };
  },
};
