crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multi_status_all_typeless_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { EnqueueJobResponse } from "./types";

export interface Handlers {
  enqueueJob(): Promise<EnqueueJobResponse>;
}
