crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multi_status_all_typeless_server.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.post("/api/jobs", async (req: Request, res: Response) => {
    try {
      const result = await handlers.enqueueJob();
      if (![202, 204].includes(result.status)) {
        res.status(500).json({ error: "handler returned undeclared status" });
        return;
      }
      res.status(result.status).end();
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  return router;
}
