crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multi_status_all_typeless_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export interface EnqueueJobResponse {
  status: number;
}
