crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multi_status_errors_server.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.put(
    "/api/users/:id",
    async (req: Request<{ id: string }>, res: Response) => {
      try {
        const id = req.params.id;
        const result = await handlers.upsertUser(id);
        if (![200, 201].includes(result.status)) {
          res.status(500).json({ error: "handler returned undeclared status" });
          return;
        }
        if ([200, 201].includes(result.status) && result.body === undefined) {
          res
            .status(500)
            .json({ error: "handler returned no body for a typed status" });
          return;
        }
        res.status(result.status).json(result.body);
      } catch (error: unknown) {
        if (error instanceof Error) {
          if (error.message === "ValidationError") {
            res.status(400).json({ error: "ValidationError" });
            return;
          }
          if (error.message === "Unauthorized") {
            res.status(401).json({ error: "Unauthorized" });
            return;
          }
        }
        res.status(500).json({ error: "Internal Server Error" });
      }
    },
  );

  return router;
}
