crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multi_status_inputs_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { Job, RestartJobResponse } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async restartJob(
    id: string,
    opts: { priority?: number } = {},
    headers: { authorization: string; traceId?: string | undefined },
  ): Promise<RestartJobResponse> {
    const params = new URLSearchParams();
    if (opts.priority !== undefined)
      params.set("priority", String(opts.priority));
    const query = params.toString();
    const requestHeaders = new Headers();
    requestHeaders.set("Authorization", String(headers.authorization));
    if (headers.traceId !== undefined)
      requestHeaders.set("Trace-Id", String(headers.traceId));
    const response = await fetch(
      `${baseUrl}/api/jobs/${id}/restart${query ? `?${query}` : ""}`,
      {
        method: "POST",
        headers: requestHeaders,
      },
    );
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    let responseBody: Job | undefined;
    const responseText = await response.text();
    if (responseText) {
      responseBody = JSON.parse(responseText) as Job;
    }
    return { status: response.status, body: responseBody };
  },
};
