crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multi_status_inputs_server.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.post(
    "/api/jobs/:id/restart",
    async (req: Request<{ id: string }>, res: Response) => {
      try {
        const id = req.params.id;
        const query = {
          priority:
            req.query.priority !== undefined ? Number(req.query.priority) : 5,
        };
        const headers = {
          authorization: req.header("Authorization") as string,
          traceId: req.header("Trace-Id"),
        };
        const result = await handlers.restartJob(id, query, headers);
        if (![200, 202, 204].includes(result.status)) {
          res.status(500).json({ error: "handler returned undeclared status" });
          return;
        }
        if ([200, 202].includes(result.status) && result.body === undefined) {
          res
            .status(500)
            .json({ error: "handler returned no body for a typed status" });
          return;
        }
        if ([204].includes(result.status) && result.body !== undefined) {
          res
            .status(500)
            .json({ error: "handler returned a body for a bodyless status" });
          return;
        }
        if (result.body !== undefined) {
          res.status(result.status).json(result.body);
        } else {
          res.status(result.status).end();
        }
      } catch {
        res.status(500).json({ error: "Internal Server Error" });
      }
    },
  );

  return router;
}
