crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__multi_status_mixed_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { UpdateUserResponse, User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async updateUser(id: string): Promise<UpdateUserResponse> {
    const response = await fetch(`${baseUrl}/api/users/${id}`, {
      method: "PUT",
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    let responseBody: User | undefined;
    const responseText = await response.text();
    if (responseText) {
      responseBody = JSON.parse(responseText) as User;
    }
    return { status: response.status, body: responseBody };
  },
};
